--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,9 @@
 @import "static/style/_normalizeReset.scss";
 
+body {
+  background: #050607;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
   monospace;
