--- a/src/components/Title/Title.scss
+++ b/src/components/Title/Title.scss
@@ -1,6 +1,7 @@
 .title-container {
+  margin-bottom: 1rem;
+
   &__title {
-    font-family: 'Jost', sans-serif;
     font-size: 3.3rem;
     color: white;
  }
