--- a/src/static/style/_normalizeReset.scss
+++ b/src/static/style/_normalizeReset.scss
@@ -12,7 +12,7 @@ html {
 body {
   margin: 0;
   cursor: default;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Jost', sans-serif;
   font-style: normal;
 }
 main {
